force-app/main/default/objects/Solution__c/Solution__c.object-meta.xml
<CustomObject>
    <label>Solution</label>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>Solution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>