force-app/main/default/objects/Solution__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>Assignment__r.Course__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>