force-app/main/default/objects/Solution__c/fields/Solution_Description__c.field-meta.xml
<CustomField>
    <fullName>Solution_Description__c</fullName>
    <label>Solution Description</label>
    <type>TextArea</type>
</CustomField>