force-app/main/default/objects/Solution__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Student</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>