force-app/main/default/objects/Solution__c/validationRules/One_Solution_Per_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Solution_Per_Assignment</fullName>
    <active>false</active>
    <errorConditionFormula>Assignment__r.Solutions_Count__c   =  1  &amp;&amp; Student__r.Solutions_Count__c = 1</errorConditionFormula>
    <errorMessage>You are not able to create more than one solution for the Assignment</errorMessage>
</ValidationRule>