force-app/main/default/objects/Solution__c/validationRules/Score_Valudation.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Valudation</fullName>
    <active>true</active>
    <errorConditionFormula>Score__c &lt; 0 ||  Score__c &gt;  Assignment__r.Max_Score__c</errorConditionFormula>
    <errorMessage>Score should not be below 0 and should not exceed the Assignment max score!</errorMessage>
</ValidationRule>